--- a/append_rule.yaml
+++ b/append_rule.yaml
@@ -89,7 +89,13 @@ mix-rule-providers:
     behavior: classical
     url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/applications.txt
     path: ./ruleset/applications.yaml
-    interval: 86400        
+    interval: 86400     
+  proxy:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt"
+    path: ./ruleset/proxy.yaml
+    interval: 86400     
 
 prepend-rules:
   - DOMAIN,download.jetbrains.com,DIRECT
@@ -98,6 +104,7 @@ prepend-rules:
   - RULE-SET,reject,REJECT
   - RULE-SET,icloud,DIRECT
   - RULE-SET,apple,DIRECT
+  - RULE-SET,proxy,自动选择
   - RULE-SET,direct,DIRECT
   - RULE-SET,lancidr,DIRECT
   - RULE-SET,cncidr,DIRECT
