--- a/append_rule.yaml
+++ b/append_rule.yaml
@@ -98,6 +98,7 @@ mix-rule-providers:
     interval: 86400     
 
 prepend-rules:
+  - DOMAIN,download-cdn.jetbrains.com,DIRECT
   - DOMAIN,download.jetbrains.com,DIRECT
   - RULE-SET,applications,DIRECT
   - RULE-SET,private,DIRECT
